# TweakInspect

./: .gitignore  Pipfile  README.md  hopper.py  ida_script.py  install_hopper_script.py  main.py  requirements.in  requirements.txt  setup.cfg  tasks.py
tests/: compiler.py  test_class_addmethod.py  test_class_replacemethod.py  test_logos_register_hooks.py  test_mshookfunction.py  test_mshookmeesagex.py  test_setImp.py
tweakinspect/: __init__.py  analysis.py  codesearch.py  executable.py  main.py  models.py  registers.py  set_id0.py
tweakinspect/cli/: utils.py
tweakinspect/codesearches/: MSHookFunction.py  MSHookMessageEx.py  class_addMethod.py  class_replaceMethod.py  logos_register_hook.py  method_setImp.py  method_setImplementation.py
