[metadata]
name = tweakinspect
version = attr: tweakinspect.__version__
author = Ethan Arbuckle
author_email = ethan@objc.dev
url = "https://github.com/EthanArbuckle/TweakInspect"

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    autoflake
    black
    flake8
    isort
    mypy
    pytest
    strongarm-ios
    unix-ar

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True

[flake8]
max-line-length = 120
exclude = .venv